Bux fix: Alignment of Navbar text
All text within Navbar is aligned correctly.

--- a/src/CSS/AppHeader.css
+++ b/src/CSS/AppHeader.css
@@ -83,10 +83,16 @@ Media Queries
         border: none;
         color: white; */
     }
+
     .topnav.responsive {
         position: relative;
+        display: grid;
+    }
+
+    .topnav .Flex {
         text-align: center;
     }
+
     .topnav.responsive .icon {
         position: absolute;
         right: 0;
